--- a/webcode/style.css
+++ b/webcode/style.css
@@ -95,7 +95,7 @@ p, .welcome {
 }
 
 #main_movies {
-    height: 1500px;
+    height: 1600px;
     width: 1000px;
     margin-top: 80px;
     margin-left: auto;
@@ -129,6 +129,6 @@ p, .welcome {
 
 }
 
-#the_movies .not_last {
-    border-bottom: 1px solid #A3A3A3;
+.not_last {
+    border-bottom: 1px solid #A7A7A7;
 }
