--- a/webcode/style.css
+++ b/webcode/style.css
@@ -156,5 +156,5 @@ footer {
     border-bottom: solid;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
-    border-bottom-color: #AAAAAA;
+    border-bottom-color: #DCDCDC;
 }
