--- a/webcode/style.css
+++ b/webcode/style.css
@@ -69,15 +69,26 @@ nav ul li:hover {
 
 #main p {
     font-size: 25px;
+    margin-bottom: 60px;
 }
 
-.welcome {
-    margin-top: 60px;
+#main a {
+    color:#5B90F6;
+}
+
+#main a:hover {
+    color: #27408B;
 }
 
 #quote {
     margin-top: 100px;
     font-size: 10px;
+}
+
+#contactoptions {
+    color:#5B90F6;
+    font-size: 25px;
+    text-align: center;
 }
 
 #main {
@@ -147,7 +158,7 @@ nav ul li:hover {
 footer {
     width: 100%;
     background-color: #DCDCDC;
-    margin-top: 52px;
+    margin-top: 25px;
     text-align: center;
     font-size: 12px;
     color: #5B90F6;
